--- a/myproject/templates/app/executiveControl.html
+++ b/myproject/templates/app/executiveControl.html
@@ -22,7 +22,7 @@
                  <tr>
                      <th scope="row">1</th>
                      <td>
-                         <a href="#">AAA</a>
+                         <a href="{% url 'resProfile' restaurant.resID %}">Shabushi</a>
                      </td>
                      <td>123 บางมด</td>
                  </tr>
