--- a/myproject/templates/app/staffList.html
+++ b/myproject/templates/app/staffList.html
@@ -28,7 +28,7 @@
                 <tr>
                     <th scope="row">1</th>
                     <td>
-                        <a href="#">Phineas Flyn</a>
+                        <a href="{% url 'staffProfile' restaurant.resID %}">Ferb Fletcher</a>
                     </td>
                     <td>Staff</td>
                     <td>
