--- a/myproject/templates/app/companyProfile.html
+++ b/myproject/templates/app/companyProfile.html
@@ -5,7 +5,7 @@
     <div class="col-4 mt-4">
         <div class="row-md-4">
             <div class="card ms-5 mb-0" style="max-width : 65%; max-height : 50%">
-                <img src="{% static 'images/shabushi-logo.jpg' %}" class="card-img-top" alt="...">
+                <img src="{% static 'images/oishi-logo.jpg' %}" class="card-img-top" alt="...">
                 <div class="d-grid">
                     <label for="files" class="btn btn-primary rounded-0">Change Photo</label>
                     <!--มีเฉพาะ Manager, Executive-->
@@ -22,7 +22,7 @@
                         Shabushi
                     </h5>
                     <h6>
-                        Rama2
+                        Ton land
                     </h6>
                     <p class="proile-rating"> Rating : <span>8.3/10</span></p>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -31,15 +31,15 @@
                                 href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="company-tab" data-bs-toggle="tab" data-bs-target="#company"
-                                href="#company" role="tab" aria-controls="company" aria-selected="false">Associate</a>
+                            <a class="nav-link" id="branch-tab" data-bs-toggle="tab" data-bs-target="#branch"
+                                href="#branch" role="tab" aria-controls="branch" aria-selected="false">Branch</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-3 mt-4">
-                <input type="submit" class="profile-edit-btn" data-bs-toggle="modal" data-bs-target="#edit-res"
-                    name="btnAddMore" value="Edit Restaurant" />
+                <input type="submit" class="profile-edit-btn" data-bs-toggle="modal" data-bs-target="#edit-company"
+                    name="btnAddMore" value="Edit Company" />
             </div>
         </div>
         <div class="row">
@@ -50,8 +50,8 @@
                             <label>Owner</label>
                         </div>
                         <div class="col-md-6">
-                            <a href="{% url 'managerProfile' restaurant.resID %}">
-                                <p>Phineas Flynn</p>
+                            <a href="{% url 'executiveProfile' restaurant.resID%}">
+                                <p>Ton Ichitan</p>
                             </a>
                         </div>
                     </div>
@@ -112,16 +112,34 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade pb-5" id="company" role="tabpanel" aria-labelledby="company-tab">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <label>Company</label>
-                        </div>
-                        <div class="col-md-6">
-                            <a href="{% url 'companyProfile' restaurant.resID %}">
-                                <p>Oishi</p>
-                            </a>
-                        </div>
+                <div class="tab-pane fade pb-5" id="branch" role="tabpanel" aria-labelledby="branch-tab">
+                    <div class="history-container mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 325px">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Restaurant</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>
+                                        <a href="{% url 'resProfile' restaurant.resID%} ">
+                                            <p>Shabushi</p>
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Oishi Ramen</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Nikuya</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -130,6 +148,6 @@
 </div>
 
 
-{% include 'app/modalEditRes.html' %}
-{% include 'app/modalEditProfile.html' %}
+{% include 'app/modalStartBusiness.html' %}
+{% include 'app/modalEditComp.html' %}
 {% endblock content %}
