--- a/myproject/templates/app/managerProfile.html
+++ b/myproject/templates/app/managerProfile.html
@@ -1,3 +1,4 @@
+<!--เดี๋ยวแก้เป็นหน้าของ staff-->
 {% extends 'app/base.html' %}
 {% load static %}
 {% block content %}
@@ -5,9 +6,10 @@
     <div class="col-4 mt-4">
         <div class="row-md-4">
             <div class="card ms-5 mb-0" style="max-width : 65%; max-height : 50%">
-                <img src="{% static 'images/profile.png' %}" class="card-img-top" alt="...">
+                <img src="{% static 'images/Phineas.png' %}" class="card-img-top" alt="...">
                 <div class="d-grid">
                     <label for="files" class="btn btn-primary rounded-0">Change Photo</label>
+                    <!--มีเฉพาะ Staff-->
                     <input id="files" style="visibility:hidden; height:0" type="file">
                 </div>
             </div>
@@ -16,7 +18,6 @@
             <div class="col-md">
                 <div class="profile-work">
                     <p>Company / Restaurant</p>
-                    <a href="{% url 'managerControl' restaurant.resID%}">Detail</a><br />
                     <a href="{% static 'app/modalBusiness.html' %}" data-bs-toggle="modal"
                         data-bs-target="#business">Start my own</a><br />
                 </div>
@@ -28,7 +29,7 @@
             <div class="col-9 mt-4">
                 <div class="profile-head">
                     <h5>
-                        Ferb Fletcher
+                        Phineas Flynn
                     </h5>
                     <h6>
                         Manager, Bar-B-Q
@@ -38,10 +39,6 @@
                         <li class="nav-item" role="presentation">
                             <a class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home"
                                 href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
-                                href="#profile" role="tab" aria-controls="profile" aria-selected="false">History</a>
                         </li>
                         <li class="nav-item" role="presentation">
                             <a class="nav-link" id="owner-tab" data-bs-toggle="tab" data-bs-target="#owner"
@@ -63,7 +60,7 @@
                             <label>User Id</label>
                         </div>
                         <div class="col-md-6">
-                            <p>Ferby123</p>
+                            <p>Phineas999</p>
                         </div>
                     </div>
                     <div class="row">
@@ -71,15 +68,7 @@
                             <label>Name</label>
                         </div>
                         <div class="col-md-6">
-                            <p>Ferb Fletcher</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <label>Workplace</label>
-                        </div>
-                        <div class="col-md-6">
-                            <p>Bar-B-Q</p>
+                            <p>Phineas Flyn</p>
                         </div>
                     </div>
                     <div class="row">
@@ -111,7 +100,7 @@
                             <label>Email</label>
                         </div>
                         <div class="col-md-6">
-                            <p>ferby@gmail.com</p>
+                            <p>phineasy@gmail.com</p>
                         </div>
                     </div>
                     <div class="row">
@@ -123,155 +112,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade " id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                    <div class="history-container mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 325px">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Registor</th>
-                                    <th scope="col">Restaurant</th>
-                                    <th scope="col">Position</th>
-                                    <th scope="col">Resign</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>01/12/2021</td>
-                                    <td>FAPORATTE Co.</td>
-                                    <td>Staff</td>
-                                    <td>Active</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>12/05/2021</td>
-                                    <td>Bonchon</td>
-                                    <td>Manager</td>
-                                    <td>13/06/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>13/07/2021</td>
-                                    <td>CoCoICHIBANYA</td>
-                                    <td>Manager</td>
-                                    <td>13/08/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
                 <div class="tab-pane fade pb-5" id="owner" role="tabpanel" aria-labelledby="owner-tab">
-                    
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>User Id</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Ferby123</p>
-                            </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label>Restaurant</label>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Name</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Ferb Fletcher</p>
-                            </div>
+                        <div class="col-md-6">
+                            <a href="{% url 'resProfile' restaurant.resID %}">
+                                <p>Shabushi</p>
+                            </a>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Workplace</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Bar-B-Q</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Position</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Manager</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Date of birth</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>12/02/2021</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Gender</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Male</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Email</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>ferby@gmail.com</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Phone</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>123 456 7890</p>
-                            </div>
-                        </div>
-
-               
+                    </div>
                 </div>
             </div>
         </div>
