--- a/myproject/templates/app/staffList.html
+++ b/myproject/templates/app/staffList.html
@@ -24,16 +24,20 @@
                 </tr>
             </thead>
             <tbody id="Table">
-                {% for  in  %}
+                {% for staff in staffs %}
                 <tr>
                     <th scope="row">1</th>
                     <td>
-                        <a href="#">Phineas Flyn</a>
+                        <a href="{% url 'userprofile' staff.id %}">{{staff.fullName}}</a>
                     </td>
-                    <td>Staff</td>
+                    <td>{{staff.groups.get.name}}</td>
                     <td>
-                        <a class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#editRole">Edit</a>
-                        <a class="btn btn-sm btn-danger" href="#">Delete</a>
+                        
+                            <a class="btn btn-sm btn-warning" data-bs-toggle="modal"
+                                data-bs-target="#editRole{{staff.id}}">Edit</a>
+                            <a class="btn btn-sm btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#editRole{{staff.id}}">Delete</a>
+                        </form>
                     </td>
                 </tr>
                 {% endfor %}
