--- a/myproject/templates/app/userProfile.html
+++ b/myproject/templates/app/userProfile.html
@@ -5,7 +5,7 @@
     <div class="col-4 mt-4">
         <div class="row-md-4">
             <div class="card ms-5 mb-0" style="max-width : 65%; max-height : 50%;">
-                <img src="{{profile.picture.url}}" class="card-img-top" alt="...">
+                <img src="{{profile.profile.url}}" class="card-img-top" alt="...">
                 <div class="d-grid">
                     <label for="files" class="btn btn-primary rounded-0">Change Photo</label>
                     <input id="files" style="visibility:hidden; height:0" type="file">
@@ -29,12 +29,9 @@
                     <h5>
                         {{profile.fullName}}
                     </h5>
-                    {{profile.roleID}}
-                    {% if profile.roleID == " 0 " %}
                     <h6>
                         User, Gold member
                     </h6>
-                    {% endif %}
 
                     <p class="proile-rating"> Point : <span>97/100</span></p>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -115,6 +112,7 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                {% if queue %}
                                 <tr>
                                     <th scope="row">1</th>
                                     <td>{{queue.reserveTime}}</td>
@@ -125,6 +123,7 @@
                                     {% endif %}
 
                                 </tr>
+                                {% endif %}
                                 <tr>
                                     <th scope="row">2</th>
                                     <td>13/05/2021</td>
