--- a/myproject/templates/app/base.html
+++ b/myproject/templates/app/base.html
@@ -27,7 +27,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-
+    <script src="https://api.longdo.com/map/?key=0e62c3f82b93ebd9c71082feb1eca51d"></script>
 
 
 
