--- a/myproject/templates/app/navbar.html
+++ b/myproject/templates/app/navbar.html
@@ -10,7 +10,7 @@
     }
 </style>
 
-<nav class="navbar navbar-expand-lg navbar-dark navbar-YENYEN " style = "height:113px">
+<nav class="navbar navbar-expand-lg navbar-dark navbar-YENYEN " style="height:113px">
     <div class="navbar-inner container-fluid">
         <div class="d-flex justify-content-start d-flex align-items-center col-4">
             <a class="navbar-brand" style="margin: 0px 15px" href="/">YENYEN</a>
@@ -34,9 +34,11 @@
                 </li>
             </ul>
             {% elif user.groups.get.name ==  "staff" or user.groups.get.name ==  "manager" %}
-                <button type="button" class="btn btn-lg text-white h3" style = "margin:0px 15px;background-color:#D0BDF4;">Restaurant</button>
+            <button type="button" class="btn btn-lg text-white h3"
+                style="margin:0px 15px;background-color:#D0BDF4;">Restaurant</button>
             {% elif user.groups.get.name ==  "executive" %}
-                <button type="button" class="btn btn-lg text-white h3" style = "margin:0px 15px;background-color:#D0BDF4;">Company</button>
+            <button type="button" class="btn btn-lg text-white h3"
+                style="margin:0px 15px;background-color:#D0BDF4;">Company</button>
 
 
 
@@ -49,7 +51,7 @@
         <div class="card col-9">
             <div class="card-body" style="padding: 16px 25px">
                 <table class="col-12 justify-content-between">
-                {% if user.groups.get.name ==  'member' %}
+                    {% if user.groups.get.name ==  'member' %}
                     <tr>
                         <td>
                             <h5 class="card-title d-flex justify-content-start">Queue Number : </h5>
@@ -67,7 +69,7 @@
                         </td>
                     </tr>
                     {% elif user.groups.get.name ==  "staff" or user.groups.get.name ==  "manager" or user.groups.get.name ==  "executive" %}
-                     <tr>
+                    <tr>
                         <td>
                             <h5 class="card-title d-flex justify-content-start">Company : </h5>
                         </td>
@@ -97,7 +99,7 @@
             <td>
 
                 <a href="{%url 'userprofile' request.user.id %}">
-                    <img src="{{ request.user.picture.url }}" class="img border border-white rounded-3"
+                    <img src="{{ request.user.profile.url }}" class="img border border-white rounded-3"
                         style="height: 60px; width: 60px;">
                 </a>
 
