--- a/myproject/templates/app/review.html
+++ b/myproject/templates/app/review.html
@@ -1,14 +1,22 @@
-<div class="input-group m-3">
-    <input type="text" class="form-control rounded" style="height: 100px;" placeholder="Enter your review"
-        aria-label="Enter your review" aria-describedby="basic-addon2">
-</div>
-<div class="input-group m-3 d-flex justify-content-between">
-    <div class="score">
-        <i class="fas fa-star text-warning"></i>
-        <i class="fas fa-star text-warning"></i>
-        <i class="fas fa-star text-warning"></i>
-        <i class="fas fa-star text-warning"></i>
-        <i class="fas fa-star text-warning"></i>
+<div class="row justify-content-center mt-4">
+    <div class="col-xl-8">
+        <div class="card p-3" style="">
+            <form action="" method="POST">
+                <div class="input-group ">
+                    <input type="text" class="form-control rounded" style="height: 100px;"
+                        placeholder="Enter your review" aria-label="Enter your review" aria-describedby="basic-addon2">
+                </div>
+                <div class="input-group  d-flex justify-content-between mt-2">
+                    <div class="score mt-2">
+                        <i class="fas fa-star text-warning"></i>
+                        <i class="fas fa-star text-warning"></i>
+                        <i class="fas fa-star text-warning"></i>
+                        <i class="fas fa-star text-warning"></i>
+                        <i class="fas fa-star text-warning"></i>
+                    </div>
+                    <button type="button" class="btn btn-info rounded col-md-2" style="color:white;">Summit</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <button type="button" class="btn btn-info rounded col-md-2" style="color:white;">Summit</button>
 </div>
