--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -1,10 +1,7 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block content %}
-<div class="row justify-content-center">
-  {% for message in messages %}
-  <p id="messages">{{message}}</p>
-  {% endfor %}
+<div class="row justify-content-center mt-4">
   <div class="col-xl-8">
     <div class="card p-3" style="">
       <div class="row">
@@ -59,4 +56,3 @@
 {% include 'app/review.html'  %}
 {% include 'app/modalResCard.html' %}
 {% endblock content %}
-</div>
