--- a/myproject/templates/app/navbar.html
+++ b/myproject/templates/app/navbar.html
@@ -19,7 +19,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            {% if user.role !=  "ST" and user.role !=  "MA" and user.role !=  "EX"%}
+            {% if user.role !=  "staff" and user.role !=  "manager" and user.role !=  "executive"%}
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" style="margin: 0px 15px; font-size: 18px" href="#"
@@ -33,9 +33,9 @@
                     </ul>
                 </li>
             </ul>
-            {% elif user.role ==  "ST" or user.role ==  "MA" %}
+            {% elif user.role ==  "staff" or user.role ==  "manager" %}
                 <button type="button" class="btn btn-lg text-white h3" style = "margin:0px 15px;background-color:#D0BDF4;">Restaurant</button>
-            {% elif user.role ==  "EX" %}
+            {% elif user.role ==  "executive" %}
                 <button type="button" class="btn btn-lg text-white h3" style = "margin:0px 15px;background-color:#D0BDF4;">Company</button>
 
 
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    {% if request.user.is_authenticated and user.role != "AD"  %}
+    {% if request.user.is_authenticated and user.role != "admin"  %}
     <div class="nav-item col-4 d-flex justify-content-center">
         <div class="card col-9">
             <div class="card-body" style="padding: 16px 25px">
@@ -66,7 +66,7 @@
                             <h5 class="card-subtitle mb-2 text-muted d-flex justify-content-center"> No queue</h5>
                         </td>
                     </tr>
-                    {% elif user.role ==  "ST" or user.role ==  "MA" or user.role ==  "EX" %}
+                    {% elif user.role ==  "staff" or user.role ==  "manager" or user.role ==  "executive" %}
                      <tr>
                         <td>
                             <h5 class="card-title d-flex justify-content-start">Company : </h5>
