--- a/myproject/templates/app/base.html
+++ b/myproject/templates/app/base.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body>
+<body style="background-color:;">
     {% include 'app/navbar.html' %}
     <div class="container">
         {% block content %}
