--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -39,7 +39,7 @@
                 </button>
               </a>
               <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">
+                data-bs-target="#createNowQueue">
                 จองคิว
               </button>
             </p>
