update all model and review system

--- a/myproject/templates/app/executiveControl.html
+++ b/myproject/templates/app/executiveControl.html
@@ -30,9 +30,9 @@
                      </td>
                      <td>{{restaurant.fullAddress}}</td>
                      <td><a class="btn btn-sm btn-warning" data-bs-toggle="modal"
-                             data-bs-target="#editRole{{staff.id}}">Edit</a>
+                             data-bs-target="#editRole{{staff.memberID}}">Edit</a>
                          <a class="btn btn-sm btn-danger" data-bs-toggle="modal"
-                             data-bs-target="#deleteStaff{{staff.id}}">Delete</a>
+                             data-bs-target="#deleteStaff{{staff.memberID}}">Delete</a>
                      </td>
                  </tr>
                  {% endfor %}
