--- a/myproject/templates/app/modalEditRole.html
+++ b/myproject/templates/app/modalEditRole.html
@@ -1,6 +1,6 @@
 {% for staff in staffs %}
 <!-- Modal -->
-<div class="modal fade" id="editRole{{staff.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="editRole{{staff.memberID}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header border-0 align-self-start">
@@ -14,7 +14,7 @@
                     <form action="{% url 'editRole' pk %}" method="POST">
                         {% csrf_token %}
                         {{form.as_table}}
-                        {% comment %} <input type="text" value="{{staff.id}}" name="id" class="btn btn-primary" hidden>
+                        {% comment %} <input type="text" value="{{staff.memberID}}" name="id" class="btn btn-primary" hidden>
                         <select class="form-select d-inline " name="groups" aria-label="Default select example"
                             style="width: 50%;">
                             <option value="" disabled selected hidden>{{staff.groups.get.name}}</option>
