--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -4,8 +4,8 @@
 <div class="row justify-content-center mt-4">
   <div class="col-xl-8">
     <div class="card p-3" style="">
-      <img src="{{restaurant.coverPic.url}}" class="imgBg" alt="Responsive image" />
-      <img src="{{restaurant.profilePic.url}}" class="imgCollab" alt="Responsive image" />
+      <img src="{{restaurant.getCoverPic}}" class="imgBg" alt="Responsive image" />
+      <img src="{{restaurant.getProfilePic}}" class="imgCollab" alt="Responsive image" />
       <div class="row">
         <div class="col-6">
           <div class="card-body">
@@ -51,6 +51,7 @@
 </div>
 
 {% include 'app/map.html' %}
+{% include 'queueSystem/showReview.html'  %}
 {% include 'app/review.html'  %}
 {% include 'app/modalResCard.html' %}
 {% endblock content %}
