--- a/myproject/templates/app/modalDeleteStaff.html
+++ b/myproject/templates/app/modalDeleteStaff.html
@@ -1,6 +1,6 @@
 {% for staff in staffs %}
 <!-- Modal -->
-<div class="modal fade" id="deleteStaff{{staff.id}}" tabindex="-1" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="deleteStaff{{staff.memberID}}" tabindex="-1" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content ">
@@ -16,7 +16,7 @@
                 </button>
                 <form action="{% url 'deleteStaff' pk %}" method="POST">
                     {% csrf_token %}
-                    <input type="text" class="form-control" id="name" name="id" hidden value="{{staff.id}}">
+                    <input type="text" class="form-control" id="name" name="id" hidden value="{{staff.memberID}}">
                     <input type="text" class="form-control" id="name" name="resID" hidden value="">
                     <button type="submit" class="btn btn-danger">Confirm</button>
                 </form>
