--- a/myproject/templates/app/review.html
+++ b/myproject/templates/app/review.html
@@ -1,9 +1,15 @@
 <div class="row justify-content-center mt-4">
     <div class="col-xl-8">
         <div class="card p-3" style="">
-            <form action="" method="POST">
+            <p class="fs-5"><img src="{{request.user.getProfilePic}}" class="me-2" style="height:30px ;">
+                {{request.user.fullName}}
+            </p>
+            <form action="{% url 'createReview' restaurant.resID %}" method="POST">
+                {% csrf_token %}
                 <div class="input-group ">
-                    <input type="text" class="form-control rounded" style="height: 100px;"
+                    <input type="text" name="resID" hidden value="{{restaurant.resID}}">
+                    <input type="text" name="memberID" hidden value="{{request.user.memberID}}">
+                    <input type="text" name="detail" class="form-control rounded" style="height: 100px;"
                         placeholder="Enter your review" aria-label="Enter your review" aria-describedby="basic-addon2">
                 </div>
                 <div class="input-group  d-flex justify-content-between mt-2">
@@ -14,7 +20,7 @@
                         <i class="fas fa-star text-warning"></i>
                         <i class="fas fa-star text-warning"></i>
                     </div>
-                    <button type="button" class="btn btn-info rounded col-md-2" style="color:white;">Summit</button>
+                    <button type="submit" class="btn btn-info rounded col-md-2" style="color:white;">Submit</button>
                 </div>
             </form>
         </div>
