--- a/myproject/templates/app/userProfile.html
+++ b/myproject/templates/app/userProfile.html
@@ -5,11 +5,11 @@
     <div class="col-4 mt-4">
         <div class="row-md-4">
             <div class="card ms-5 mb-0" style="max-width : 65%; max-height : 50%;">
-                <img src="{{profile.profile.url}}" class="card-img-top" alt="...">
+                <img src="{{profile.getProfilePic}}" class="card-img-top" alt="...">
                 <div class="d-block">
                     <form action="changeProfile" method="POST" style="height: 38px">
                         <label for="files" class="btn btn-primary rounded-0 d-block">Change Photo</label>
-                        <input name="id" hidden type="text" value="{{profile.id}}">
+                        <input name="id" hidden type="text" value="{{profile.memberID}}">
                         <input id="files" style="visibility:hidden; height:0;" alt="submit" type="file">
                     </form>
                 </div>
@@ -59,7 +59,7 @@
                 <div class="tab-pane fade show active pb-5" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>{{profile.id}}</p>
+                            <p>{{profile.memberID}}</p>
                         </div>
                     </div>
                     <div class="row">
